# OntoLoop

./: .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  README-CN.md  README.md  TUI_DESIGN.md  build.rs  ceshi.txt  docker-compose.yml  package.json
.ontoloop-sessions/: cli-1778514348395.json  cli-1778514376441.json  cli-1778515409672.json  test-260103768.json
NoumenonCore/: ARCHITECTURE.md  Cargo.toml  DIALOGUE_OPERATION_LOG.md  SESSION_OPERATION_LOG.md
NoumenonCore/.github/workflows/: release-gates.yml
NoumenonCore/src/: admission_sigstore.rs  evolution.rs  execution.rs  governance.rs  ir.rs  kernel.rs  ledger.rs  lib.rs  memory_evolution.rs  observability.rs  prelude.rs  replay.rs  resource.rs  routing.rs  state.rs  storage_vector.rs  syscall.rs  tooling.rs  trust.rs  truth.rs
NoumenonCore/tests/: invariants.rs
apps/ontoloop-cli/: .gitignore  README.md  package.json
autoloop-postgres-adapter/: Cargo.toml
autoloop-postgres-adapter/src/: lib.rs
autoloop-state-adapter/: Cargo.toml
autoloop-state-adapter/src/: lib.rs
cli-frontend/: COPY_MANIFEST.json
cli-frontend/opencode-subset/: package.json
dashboard-ui/src/: data.ts
deploy/: deploy.ps1
deploy/backup/: backup.ps1  restore.ps1
deploy/benchmarks/: benchmark_v1_dev.json  benchmark_v1_heldout.json  benchmark_v1_manifest.json  benchmark_v1_master.json  benchmark_v1_stress.json  d12_real_tasks_v1.json
deploy/config/: autoloop.baseline_v0.toml  autoloop.dev.toml  autoloop.lite.toml  autoloop.opencode_like.toml  autoloop.prod.toml
deploy/scripts/: README_MAINLINE.md  baseline_v0_freeze.ps1  baseline_v0_freeze.sh  benchmark_v1_compare.ps1  benchmark_v1_compare.sh  benchmark_v1_eval.ps1  benchmark_v1_eval.sh  benchmark_v1_generate.ps1  benchmark_v1_generate.sh  d12_ops_productized_acceptance.ps1  (+60 more)
docs/: ACCEPTANCE_LAYERS_V1.md  BASELINE_V0.md  BENCHMARK_V1.md  CLI_SPECIFICATION.md  CONTRACT_MIGRATION_MATRIX_V1.md  DAY10_E2E_ACCEPTANCE.md  ONTOLOOP_ARXIV_PAPER.aux  ONTOLOOP_ARXIV_PAPER.out  ONTOLOOP_ARXIV_PAPER.tex  P1_P13_UNIFIED_PROTOCOL.md  README.md  RFC_CONTRACTS_V1.md  SUPERMEMORY_FIRST_PRINCIPLES_MAPPING.md  production_contract.md
examples/: state_store_sdk.rs
ontoloop-core/: Cargo.toml
src/: adaptive_framework.rs  command_dispatch.rs  dashboard_server.rs  lib.rs  main.rs  path_safety.rs
state-module/: Cargo.toml
state-module/src/: lib.rs
tests/: d10_d11_security_governance_gate_suite.rs  d12_storage_postgres_wal_dualwrite_replay_e2e.rs  d8_branch_lease_gate_e2e.rs  d9_wasm_sandbox_runtime_paths_e2e.rs  day5_hardgate_runtime_enforced_e2e.rs  evidence_worm_hardening_e2e.rs  hook_7phase_pipeline_e2e.rs  layered_tool_stack_pipeline_e2e.rs  mediator_no_bypass_e2e.rs  no_bypass_static_scan.rs  p10_cross_kernel_three_sources_e2e.rs  p10_day10_acceptance_e2e.rs  p10_evidence_six_segments_e2e.rs  p10_full_chain_uniform_tracking_e2e.rs  p10_governance_policy_feedback_e2e.rs  p10_replay_mismatch_explainer_e2e.rs  p12_promotion_rollback_memory_guard_e2e.rs  p13_business_sovereignty.rs  p14_supermemory_stage5_e2e.rs  p1_audit_trail.rs  p1_reject_revise_loop.rs  p1_state_machine_matrix.rs  p5_perf_stability.rs  p5_reject_revise_e2e.rs  p5_runtime_escape_guard.rs  p5_trace_integrity.rs  p6_rollout_gating.rs  p7_capability_admission_reject_e2e.rs  p7_identity_tenant_sovereignty.rs  p7_trigger_wake_plan_execute_e2e.rs  p8_budget_ledger_sovereignty.rs  permission_mode_runtime_enforced_e2e.rs  pevo_r10_promote_canary_fail_rollback_e2e.rs  pevo_r9_decision_path_refs_e2e.rs  policy_acceptance_e2e.rs  pq10_intent_query_tools_compact_verify_snapshot_resume_replay_e2e.rs  pq10_no_bypass_gate_e2e.rs  pq10_query_loop_parallel_tool_events_contract.rs  pq11_d11_compact_snapshot_task_mcp_parallel_e2e.rs  pq11_signal_observability_pressure_chain_e2e.rs  (+45 more)
(+335 files in other folders)
