[workspace]
members = [
    "autoloop-postgres-adapter",
    "autoloop-state-adapter",
    "NoumenonCore",
    "ontoloop-core",
]

[package]
name = "ontoloop"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "OntoLoop modular runtime skeleton"

[lib]
name = "autoloop"

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
autoloop-state-adapter = { path = "autoloop-state-adapter" }
autoloop-postgres-adapter = { path = "autoloop-postgres-adapter" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "process", "time", "net", "io-util", "fs"] }
futures = "0.3"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hnsw_rs = "0.3"
parking_lot = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
trustkernel = { path = "NoumenonCore" }
ontoloop-core = { path = "ontoloop-core" }
jsonwebtoken = "9"
wasmtime = "25"
flate2 = "1"
tar = "0.4"
sha2 = "0.10"
rand = "0.8"
rand_distr = "0.4"
ratatui = "0.29"
crossterm = "0.28"
unicode-width = "0.2"

[dev-dependencies]
rsa = { version = "0.9", features = ["pem"] }
wat = "1"

