[package]
name = "autoloop-state-adapter"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "AutoLoop internal adapter layer for StateStore-backed state"

[dependencies]
anyhow = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
autoloop-postgres-adapter = { path = "../autoloop-postgres-adapter" }
tokio = { version = "1", features = ["sync"] }

